Fixed to much white space between teams and inside teams

--- a/src/app/components/team-list/team-list.component.scss
+++ b/src/app/components/team-list/team-list.component.scss
@@ -66,4 +66,5 @@ button:hover {
     padding: 1rem;
     width: 100%;
     padding-top: 0rem;
+    align-self: flex-start
 }
